Update and rename 0606.md to 0616.md

--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -1,4 +1,5 @@
-## Topis 
+## Topis in Vision and Language: Grounding, Diversity and Author Anonymity
+- [Bernt Schiele](https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl=en)
 
 ### Grounding Language in Visual Data (ECCV16)
 #### Grounding task
@@ -30,8 +31,42 @@
 
 #### Key Ingredients
 - Enforcing diversity explicity: discriminator see a set of captions; decide real/fake by image-caption and caption-image correlations
-
 - deal with discrete 
+
+#### Results
+- Performs well on human evaluation
+- better matching the N-gram distribution
+
+### Author attribute anonymity (A4NT)
+#### Ahthorship attribution
+- identity
+- gender
+- age
+
+#### Goal
+- hide identity of the authors
+- preserve the meaning
+
+#### obfuscation
+- Similiar to the machine-translation
+
+#### solution
+- loss function: attribute classifier; language model; semantic consistency
+- attribution classifier: gan; (classifier to classify the attibute; another to fool it)
+- semantic consistency: cycle consistency
+
+#### Datasets and Results
+
+- blog authorship corps
+- Obama to Trump
+---
+
+
+
+
+
+
+
 
 
 
