--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -1,4 +1,11 @@
-## Topis in Vision and Language: Grounding, Diversity and Author Anonymity
+# 0616: workshop on Language and Vision
+
+## Indexing:
+- [Topis in Vision and Language](#Topis-in-Vision-and-Language)
+
+---
+## Topis in Vision and Language
+-  Grounding, Diversity and Author Anonymity
 - [Bernt Schiele](https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl=en)
 
 ### Grounding Language in Visual Data (ECCV16)
@@ -16,7 +23,7 @@
 #### Evaluation:
  - Dataset: Flickr30k
  - semi-supervised better than supervised
-
+---
 
 ### Aiming for higher diversity in captioning
 #### Image Captioning task
