--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -1,10 +1,11 @@
 # 0616: workshop on Language and Vision
 
 ## Indexing:
-- [Topis in Vision and Language](#Topis-in-Vision-and-Language)
+- [Topics in Vision and Language](#Topics-in-Vision-and-Language)
+- [Paper1 show and tell](#Paper1-show-and-tell)
 
 ---
-## Topis in Vision and Language
+## Topics in Vision and Language
 -  Grounding, Diversity and Author Anonymity
 - [Bernt Schiele](https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl=en)
 
@@ -66,7 +67,43 @@
 
 - blog authorship corps
 - Obama to Trump
+
 ---
+## Paper1 show and tell
+- [Show, Control and Tell:A Framework for Generating Controllable and Grounded Captions](https://arxiv.org/pdf/1811.10652.pdf)
+
+### Introduction
+- Image feature vector for image captioning
+- Early: global
+- Advanced 
+
+
+### Controllable Image captioning
+- so fa: word level
+- our: noun-chunks
+- different captions -> different chunks -> different regions
+
+- finetune using reinforcement learning
+- network for sorting
+
+### Results 
+- diversity
+- controlling with a sequence of regions
+
+---
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
