--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -1,9 +1,10 @@
 # 0616: workshop on Language and Vision
+- [Language and Vision](http://languageandvision.com/)
 
 ## Indexing:
 - [Topics in Vision and Language](#Topics-in-Vision-and-Language)
 - [Paper1 show and tell](#Paper1-show-and-tell)
-
+- [Paper2 Generating Diverse and Informative Natural Language Fashion Feedback](#Paper2-Generating-Diverse-and-Informative-Natural-Language-Fashion-Feedback)
 ---
 ## Topics in Vision and Language
 -  Grounding, Diversity and Author Anonymity
@@ -86,12 +87,17 @@
 - finetune using reinforcement learning
 - network for sorting
 
-### Results 
+### Results and dataset
 - diversity
 - controlling with a sequence of regions
+- COCO; Semi-automatically annotated
 
 ---
+## Paper2 Generating Diverse and Informative Natural Language Fashion Feedback
+- [Generating Diverse and Informative Natural Language Fashion Feedback](http://languageandvision.com/)
 
+
+---
 
 
 
