--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -80,7 +80,7 @@
 
 
 ### Controllable Image captioning
-- so fa: word level
+- so far: word level
 - our: noun-chunks
 - different captions -> different chunks -> different regions
 
