--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -5,6 +5,8 @@
 - [Topics in Vision and Language](#Topics-in-Vision-and-Language)
 - [Paper1 show and tell](#Paper1-show-and-tell)
 - [Paper2 Generating Diverse and Informative Natural Language Fashion Feedback](#Paper2-Generating-Diverse-and-Informative-Natural-Language-Fashion-Feedback)
+- [Paper3 A Coherence Approach to Data-Driven Inference in Visual Communication](#A-Coherence-Approach-to-Data-Driven-Inference-in-Visual-Communication)
+- [Spotlight1](#Spotlight1)
 ---
 ## Topics in Vision and Language
 -  Grounding, Diversity and Author Anonymity
@@ -96,17 +98,46 @@
 ## Paper2 Generating Diverse and Informative Natural Language Fashion Feedback
 - [Generating Diverse and Informative Natural Language Fashion Feedback](http://languageandvision.com/)
 
+### Introduction
+- Image captioning on fashine domain
+
+### Dataset
+- Created a dataset with GOOD and TIP label annotated by fashion specialist
+- Challenges: visual difference is small; answer diversity is small
+
+### Architecture
+- detecter; encoder; decoder
+- encoder: sequence encoder
+- decoding with maximum mutual information (MMI)
 
 ---
+## Paper3 A Coherence Approach to Data-Driven Inference in Visual Communication
+- [A coherence approach to data-driven inference in visual communication](http://languageandvision.com/)
 
+### Overview
+- discourse
 
+- learning how textual cues guide image interpretations
+- learning what information is in the image or text
 
+### Related work
+- machine conprehension
+- text summarizaion
 
+### discourse relations in image-text presentation
 
+### Data collection
+- crowdsourcing experiemnt
+- relations 
 
+### Analysis
+- information across modalities
 
+### Diagram
+- diagram structures
+- arrows
 
-
+---
 
 
 
