--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -138,7 +138,34 @@
 - arrows
 
 ---
+## Spotlight1
+### Deep Sentiment Features of Context, Faces and Text for Affective Video Analysis
+- Extract faces from the video
+- Using the sentiment information
 
+### Dense Relational Captioning: Triple-Stream Networks for Relationship-Based Captioning
+- Relationship-based captioning
+
+### Others
+- Few-shot object recognition from semantic information
+- Chart question answering (CQA)
+
+
+### Curvature: A signature for Action Recognition in Video Sequences
+
+### Image Captioning with Integrated Bottom-Up and Multi-level Residual Top-Down Attention for Game Scene Understanding
+- Top-down attention from game scene image captioning
+
+### Image captioning with weakly-supervised attention penalty
+- geometic 
+
+### Let's Transfer Text Transformations to Images
+- image transformation by text
+
+### Answer Them All! Toward Universal Visual Question Answering Models
+- 5 approaches on 8 dataset
+
+---
 
 
 
