--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -7,6 +7,8 @@
 - [Paper2 Generating Diverse and Informative Natural Language Fashion Feedback](#Paper2-Generating-Diverse-and-Informative-Natural-Language-Fashion-Feedback)
 - [Paper3 A Coherence Approach to Data-Driven Inference in Visual Communication](#Paper3-A-Coherence-Approach-to-Data-Driven-Inference-in-Visual-Communication)
 - [Spotlight1](#Spotlight1)
+- [Devi Parikh](#Devi Parikh)
+
 ---
 ## Topics in Vision and Language
 -  Grounding, Diversity and Author Anonymity
@@ -163,7 +165,9 @@
 - image transformation by text
 
 ### Answer Them All! Toward Universal Visual Question Answering Models
-- 5 approaches on 8 dataset
+- 5 approaches on 8 datasets
+- approaches which achieve high accuracy on CG dataset perform bad on real dataset;
+- approaches which achieve high accuracy on real dataset perform bad on CG dataset.
 
 ---
 
