--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -7,8 +7,8 @@
 - [Paper2 Generating Diverse and Informative Natural Language Fashion Feedback](#Paper2-Generating-Diverse-and-Informative-Natural-Language-Fashion-Feedback)
 - [Paper3 A Coherence Approach to Data-Driven Inference in Visual Communication](#Paper3-A-Coherence-Approach-to-Data-Driven-Inference-in-Visual-Communication)
 - [Spotlight1](#Spotlight1)
-- [Devi Parikh](#Devi Parikh)
-
+- [Devi Parikh](#Devi-Parikh)
+- [Andrei Barbu](Andrei-Barbu)
 ---
 ## Topics in Vision and Language
 -  Grounding, Diversity and Author Anonymity
@@ -170,9 +170,16 @@
 - approaches which achieve high accuracy on real dataset perform bad on CG dataset.
 
 ---
+- Devi Parikh
 
 
 
+
+
+---
+- [Andrei Barbu](Andrei-Barbu)
+
+---
 
 
 
