--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -8,7 +8,9 @@
 - [Paper3 A Coherence Approach to Data-Driven Inference in Visual Communication](#Paper3-A-Coherence-Approach-to-Data-Driven-Inference-in-Visual-Communication)
 - [Spotlight1](#Spotlight1)
 - [Devi Parikh](#Devi-Parikh)
-- [Andrei Barbu](Andrei-Barbu)
+- [Andrei Barbu](#Andrei-Barbu)
+- [Paper 4 Visual Discourse Parsing](#Paper-4-Visual-Discourse-Parsing)
+- [Short Oral Session](#Short-Oral-Session)
 ---
 ## Topics in Vision and Language
 -  Grounding, Diversity and Author Anonymity
@@ -170,17 +172,26 @@
 - approaches which achieve high accuracy on real dataset perform bad on CG dataset.
 
 ---
-- Devi Parikh
+## Devi Parikh
 
 
 
 
 
 ---
-- [Andrei Barbu](Andrei-Barbu)
+## Andrei Barbu
 
 ---
+## Paper 4 Visual Discourse Parsing
 
+
+
+---
+## Short Oral Session
+
+
+
+---
 
 
 
