--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -173,9 +173,28 @@
 
 ---
 ## Devi Parikh
+- Forcing Vision + Language Models to 
+
+- Challenge: grounding
+
+### Image Captioning
+- baby talk (2011)
+- neural baby talk (2018)
+
+### Neural baby talk
+- Novel object captioning
+- Critical for real world scenarios
+- Ties Vision + Language problem to classical vision problems
+
+### Visual Question Answering: Pythia (2018 Challenge Champion)
+- 
 
 
+### Human-AI Connection
+- Explainable AI
 
+
+- Creative AI
 
 
 ---
