--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -187,19 +187,57 @@
 - Ties Vision + Language problem to classical vision problems
 
 ### Visual Question Answering: Pythia (2018 Challenge Champion)
-- 
+- Visual Question Answering Analysis (EMNLP2016) -> biases in VQA models
+- VQA-CP Dataset
+- VQA-GVQA: deal with the VQA-CP dataset (recognize what is the relevant image region; detect the relevant answer space; predict answer)
 
+### Visual Question Answering: Reading
+- TVQA
+- LoRRA
 
-### Human-AI Connection
-- Explainable AI
+### Visual Question Answering: Consistency
+- Question Consistancy; Answer Consistency
+- VQA Rephrasing Dataset
+- Cycle-consistent framework(agnostic to VQA/VQA models; improved VQA/VQG)
 
+### Summary So Far
+- challenges grounding and generalization
+- forcing models to look
+- counter language priors via: datasets;...
+- human-in-the-loop evaluation accuracy is not the goal; performance of human-AI team is
 
-- Creative AI
+### Human-AI Connection (Language)
+#### Machine Teaching (teach human to learn)
+- no explainations
+- visual explainations
+- counter.** explainations
 
+#### creative AI
+- word -> theme
 
 ---
 ## Andrei Barbu
+- How language enables intelligence: Reducing
 
+### Recognition
+- P(sentence, video)
+
+### Retrieval
+- SENTENTIAL 
+
+### Others tasks
+- generation
+- question answering
+- disambiguation
+- language acquisition (learn language like children; language and video to a structure)
+- paraphrasing (paraphrasing with vision)
+- translation 
+- command following (planning; prformance on dataset is not predictive of real-world performance, even on other datasets)
+- Common sense reasoning
+- Planning
+
+### How do we solve new problems?
+- ??
 ---
 ## Paper 4 Visual Discourse Parsing
 
