--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -239,8 +239,22 @@
 ### How do we solve new problems?
 - ??
 ---
-## Paper 4 Visual Discourse Parsing
+## Paper 4 Visual Discourse Parsing (VDP)
+- [Visual Discourse Parsing](https://arxiv.org/pdf/1903.02252.pdf)
+- Text-Level Discourse Parsing
+- Given a video, parse the scene's relation with the context
 
+### Applications of VDP
+- video summarization
+- video paragraph captioning
+- visual sentiment analysis
+- visual dialog and visual story-telling
+
+### VDP Data Collection
+- 310 videos
+- 19 sec / video
+- mannual annotated
+- various places in UCLA
 
 
 ---
