--- a/CVPR_2019/meeting-report/0616.md
+++ b/CVPR_2019/meeting-report/0616.md
@@ -256,6 +256,9 @@
 - mannual annotated
 - various places in UCLA
 
+### Ongoing efforts and challenge
+- annotation aggrement
+- scaling up datasets by leveraging exisiting datasets
 
 ---
 ## Short Oral Session
