--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -1,1 +1,61 @@
-# 0617
+# 0617: Visual Question Answering and Dialog Workshop
+
+## Indexing:
+- [Opening Devi Pavikh](#Opening-Devi-Pavikh)
+- [Invited Talk1 Alex Schwing](#Invited-Talk1-Alex-Schwing)
+- [Invited Talk2 Lisa Hendricks](#Invited-Talk2-Lisa-Hendricks)
+- [VQA Challenge](#VQA-Challenge)
+- [Invited Talk3 Christopher Manning](#Invited-Talk3-Christopher-Manning)
+- [GQA Challenge](#GQA-Challenge)
+- [TextVQA Challenge](#TextVQA-Challenge)
+- [Invited Talk4 Karl Moritz Hermann](#Invited-Talk4-Karl-Moritz-Hermann)
+- [Invited Talk5 Layla El Asri](#Invited-Talk5-Layla-El-Asri)
+- [Visual Dialog Challenge](#Visual-Dialog-Challenge)
+- [Invited Talk6 Sanja Fidler](#Invited-Talk6-Sanja-Fidler)
+- [Invited Talk7 Yoav Artzi](#Invited-Talk7-Yoav-Artzi)
+- [Future Direction](#Future-Direction)
+- [Closing-Remark](#Closing-Remark)
+
+---
+## Opening
+
+
+
+---
+## Invited Talk1 Alex Schwing
+
+
+---
+## Invited Talk2 Lisa Hendricks
+
+---
+## VQA Challenge
+### Task Overview
+
+### Runner-up Talk
+
+### Winner Talk
+
+
+---
+## Invited Talk3 Christopher Manning
+
+---
+## GQA Challenge
+### Task Overview
+
+
+### Winner Talk
+
+
+---
+## TextVQA Challenge
+### Task Overview
+
+### Winner Talk
+
+---
+## Invited Talk4 Karl Moritz Hermann
+
+
+---
