--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -14,7 +14,7 @@
 - [Invited Talk6 Sanja Fidler](#Invited-Talk6-Sanja-Fidler)
 - [Invited Talk7 Yoav Artzi](#Invited-Talk7-Yoav-Artzi)
 - [Future Direction](#Future-Direction)
-- [Closing-Remark](#Closing-Remark)
+- [Closing Remark](#Closing-Remark)
 
 ---
 ## Opening Devi Pavikh
@@ -328,6 +328,37 @@ To summarize:
 
 ---
 ## Invited Talk4 Karl Moritz Hermann
+
+
+---
+## Invited Talk5 Layla El Asri
+
+
+
+---
+## Visual Dialog Challenge
+
+
+
+
+
+---
+## Invited Talk6 Sanja Fidler
+
+
+
+
+---
+## Invited Talk7 Yoav Artzi
+
+
+---
+## Future Direction
+
+
+
+---
+## Closing Remark
 
 
 ---
