--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -328,24 +328,108 @@ To summarize:
 
 ---
 ## Invited Talk4 Karl Moritz Hermann
+- Grounded Language Learning
 
+- Grounding Language: learning language through association with other sensory-motro experiences
+- surface form similarity != semantic similarity
 
+### How to deal with it?
+- A dataset of learning spatial relations: CG; Similiar to scene representation netwokr
+- Encoding tet + viewpoint to learn spatial representations
+- Scene Rendering from natural language; Use the Scene Representation Network
+
+### Language Grounding in Street View
+- Street View + Reinforcement Learning
+- real world; diversity imagery
+- initial task: following the instructions from google maps
+- Visual-Language Navigation in real environment dataset
+
+- Encoding Spatial Relations from natural language
+- Learning to Navigate in Cities without a Map
+- Learning to Follow Directions in Street View
 ---
 ## Invited Talk5 Layla El Asri
+- State Aliasing in Dialog Modeling with RNNs
+- State Aliasing in RL: Experiments with RNNs
+ - A study of state aliasing in structured prediction with RNNs
+ - Building a representation based on actions might not allow to recover the optimal policy
+- State Aliasing in RL: Experiments with compound actions
+- State Aliasing in RL: Setting up a dialog task
+- State Aliasing in RL: Model for dialog task
+- State Aliasing in RL: Experiments on the dialog task
 
+- Beyond task success: A closer look at jointly learning to see, ask, and GuessWhat
+
+*GuessWhat*
+- train model with maximum-likelihood objective
+- finetune with policy-gradient (both sentence and dialog level)
+
+*???*
+- state Aliasing in RL: Characterizing the problem
 
 
 ---
 ## Visual Dialog Challenge
 
+### Overview
+- Why VD:
+ - natural language instructions for robots
+ - aid visually impaired users
+ - aid situationally impaired users
+ 
+ - VisDial1.0:
+  - 130 M coco images
+  
+ - Evaluation:
+  - mean rank, recall@k
+  - For multiple correct answer, dense annotations on v1.0 test, answer with relevant scores
+  - NDCG: normalized discounted cumulative gain (swap rank between answers with the same references do not change the results)
+
+- Models:
+ - decoders: generative; discriminative
+ 
+### Winner
+- MReaL- BDAI 74.57 NDCG 
+- best MRR team have relatively biased answer distribution
+
+### Results Analysis
+- discriminative vs. generative
+ - generative models tend to create longer answers
+ 
+### Winner Talk
+- Learning to Answer: Fine-tuning with Generalized Cross Entropy for visual dialog challenge
+
+#### Task
+- Visual Dialog Challenge 2019 provides extra dense annotation
+- 
 
 
+####
+- Structure the dialog history
+- Encoder: RvA+ Recursive Visual Attention
+- Decoder: discriminative
 
+#### Tips
+- Remove history from joint embedding
+ - avoid picking long answers; avoid overfitting
+
+- Multi-head
+- Ensemble
+- RvA+
+- Complicate features
+ - bbox
+ 
+- Two-Stage Traning
+ - stage 1: learn to reason
+ - stage 2: learn to answer
+
+#### Analysis 
+- what's next
+ - utilize history for visual reasoning
+ - reduce the inconsistency of annotations
 
 ---
 ## Invited Talk6 Sanja Fidler
-
-
 
 
 ---
