--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -430,6 +430,37 @@ To summarize:
 
 ---
 ## Invited Talk6 Sanja Fidler
+- Compositional Learning of Complex Task
+
+- Multi-task Learning
+ - tasks should be benifit from each other
+ 
+- Learning in curriculum
+ - learn gradually
+
+- Most task can be break into small tasks
+
+
+### Visual Reasoning by Prograssive Module Network (ICLR2019)
+- use small modules to solve the bigger module
+- terminal modules
+- Compositional modules
+ 
+ 
+ *PMN for Visual Reasoning*
+ - Level 0: object recogniton; attribute recogniton
+ - Level 1: Image Captioning; relationship detection
+ - Level 2: Object Counting
+ - Level 3: VQA
+ - high interpretability
+ 
+ ### Learning to Caption by Asking questions
+ - Describes images with Humans in the Loop
+- Use language to guide learning agent
+
+
+
+
 
 
 ---
