--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -454,11 +454,17 @@ To summarize:
  - Level 3: VQA
  - high interpretability
  
- ### Learning to Caption by Asking questions
- - Describes images with Humans in the Loop
+### Learning to Caption by Asking questions
+- Describes images with Humans in the Loop
 - Use language to guide learning agent
+- use Language to ask a teacher
 
-
+*Components*
+- Captioner
+- Decision Maker
+- Question Generator
+- Teacher
+- Lifelong learning
 
 
 
