--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -465,14 +465,24 @@ To summarize:
 - Question Generator
 - Teacher
 - Lifelong learning
-
-
-
-
 ---
 ## Invited Talk7 Yoav Artzi
+- Three challenging research avenues
+
+- Diversity of reasoning relies on diversity of language
+
+### Biases and Reasnoing Diversity
+- How to stress-test our model
+- Natural Language Visual Reasoning (NLVR) -> Limited lexical diversity
+- Natural Language Visual Reasoning 2 (NLVR FOR rEAL)
+ - Real web image
+
+*Data Collection*
+- Alligned 
+- Models performs bad
 
 
+ 
 ---
 ## Future Direction
 
