--- a/CVPR_2019/meeting-report/0617.md
+++ b/CVPR_2019/meeting-report/0617.md
@@ -481,8 +481,18 @@ To summarize:
 - Alligned 
 - Models performs bad
 
+### The Touchdown Environment
+- writing task
+- 9000+ samples
+- Task-focused Navigation
+- Spatial Description Resolution Evaluation
 
- 
+### What is needed to ground to low-level actions
+- consinuously changing obsevations; 
+- Model: mapping and planning
+
+- github.com/lil-lab/drif
+- reasoning diversity; real-life applications; realistic agents
 ---
 ## Future Direction
 
