--- a/CVPR_2019/meeting-report/0618.md
+++ b/CVPR_2019/meeting-report/0618.md
@@ -8,3 +8,95 @@
 
 ---
 ## oral session1
+- Best Student Award：
+ - Reinforced Cross-Modal Matching and Self-supervised Imitation Learning for Vision-Language Navigation
+
+### SDRSAC: Semidefinite-Based Randomized Approach for Robust Point Cloud Registration Without Correspondences
+- rigid body transformation
+- do not extracting key point
+- graph matching
+- outperform other methods in terms of consensus sizes
+
+### BAD SLAM: Bundle Adjusted Direct RGB-D SLAM
+- direct bundle adjust to direct SLAM in real-time
+- eth3d framework
+- very good performance
+
+**Impressive Results**
+
+### Revealing Scenes by Inverting Structure From Motion Reconstructions
+- sfm
+- 3d map inversion
+- Visibnet
+- RefineNet
+- input increases the performance will advance
+
+- **Impressive**
+- **poster 74**
+
+### Strand-Accurate Multi-View Hair Capture
+- reconstruct hair
+- digital avatars often lacks realistic hairs
+- key: 3d line and orientation-consistency
+- Pipeline: input->line-based multiview stereo->hair strand reconstruction->hair growing->output
+
+### DeepSDF: Learning Continuous Signed Distance Functions for Shape Representation
+- key idea: directly regression of sdf(signed distance function)
+- code??
+- Varient Auto-Encoder
+
+- **Impressive Results**
+
+### Pushing the Boundaries of View Extrapolation With Multiplane Images
+- predict + render 
+- MPI
+
+
+### GA-Net: Guided Aggregation Net for End-To-End Stereo Matching
+- matching cost aggregation
+- formulate traditional to DNN
+
+### Real-Time Self-Adaptive Deep Stereo
+- depth estimation
+- fine tuning on real data
+- time cost efficiency
+
+### LAF-Net: Locally Adaptive Fusion Networks for Stereo Confidence Estimation
+- stereo matching
+- matching cost 
+- tri-modal input
+
+
+### NM-Net: Mining Reliable Neighbors for Robust Feature Correspondences
+- select consistent correspondences from initial corespondence
+- importance of local information
+- compatibility-specific knn
+- multiple consistencies
+
+### Coordinate-Free Carlsson-Weinshall Duality and Relative Multi-View Geometry
+- scene points and pinholes play almost symmetric roles
+- geometric points and lines
+
+
+### Deep Reinforcement Learning of Volume-Guided Progressive View Inpainting for 3D Point Scene Completion From a Single Depth Image
+- scene completion from a single depth image
+- former works output low resolution results
+
+- key idea: transform the 3D completion task to multi-view 2D depth map inpainting tasks
+- volume-guided view inpainting　
+- DQN-based view selection
+
+**impressive**
+---
+## Poster Session1
+### 2.5D Visual Sound
+
+
+### Language-Driven Temporal Activity Localization: A Semantic Matching Reinforcement Learning Model
+
+
+
+
+
+
+
