--- a/CVPR_2019/meeting-report/0618.md
+++ b/CVPR_2019/meeting-report/0618.md
@@ -94,9 +94,63 @@
 
 ### Language-Driven Temporal Activity Localization: A Semantic Matching Reinforcement Learning Model
 
+---
+## oral session2
+### d-SNE: Domain Adaptation Using Stochastic Neighborhood Embedding
+
+
+### Taking a Closer Look at Domain Shift: Category-Level Adversaries for Semantics Consistent Domain Adaptation
+
+
+### ADVENT: Adversarial Entropy Minimization for Domain Adaptation in Semantic Segmentation
+
+
+### ContextDesc: Local Descriptor Augmentation With Cross-Modality Context      
+
+
+### Large-Scale Long-Tailed Recognition in an Open World
+
+
+### AET vs. AED: Unsupervised Representation Learning by Auto-Encoding Transformations Rather Than Data
+
+
+### SDC – Stacked Dilated Convolution: A Unified Descriptor Network for Dense Matching Tasks
+
+
+### Learning Correspondence From the Cycle-Consistency of Time
+
+
+### AE2-Nets: Autoencoder in Autoencoder Networks
+
+
+### Mitigating Information Leakage in Image Representations: A Maximum Entropy Approach
 
 
 
+### Learning Spatial Common Sense With Geometry-Aware Recurrent Networks
 
 
+### Structured Knowledge Distillation for Semantic Segmentation
+
+
+### Scan2CAD: Learning CAD Model Alignment in RGB-D Scans
+
+
+### Towards Scene Understanding: Unsupervised Monocular Depth Estimation With Semantic-Aware Representation
+
+
+### Tell Me Where I Am: Object-Level Scene Context Prediction
+
+
+### Normalized Object Coordinate Space for Category-Level 6D Object Pose and Size Estimation
+
+
+### Supervised Fitting of Geometric Primitives to 3D Point Clouds
+
+
+### Do Better ImageNet Models Transfer Better?
+
+
+---
+## Poster Session2 
 
