--- a/CVPR_2019/meeting-report/0618.md
+++ b/CVPR_2019/meeting-report/0618.md
@@ -97,58 +97,141 @@
 ---
 ## oral session2
 ### d-SNE: Domain Adaptation Using Stochastic Neighborhood Embedding
-
+- domain adaptation
+- siamese network
+- d-SNE End-to-end learning
+- teacher-student network
 
 ### Taking a Closer Look at Domain Shift: Category-Level Adversaries for Semantics Consistent Domain Adaptation
-
+- three losses
 
 ### ADVENT: Adversarial Entropy Minimization for Domain Adaptation in Semantic Segmentation
-
+- domain adaptation in semantic segmentation
+- different setting, sensor's spec/setup
+- direct entropy minimization
+- entropy minimization with adversal training
 
 ### ContextDesc: Local Descriptor Augmentation With Cross-Modality Context      
-
+- local details and detail content
+- encoding geometric context from keypoint ditribution of individual image
+- two modules: preparation module and augmentation
+- evaluated on indoor and outdoor scenes
 
 ### Large-Scale Long-Tailed Recognition in an Open World
+- open class 
+- long tailed distribution recognition
+- Tail classes -> knowledge transfer
+- imbalanced classification
+- few-short learning
+- visual memory, bottom-up attention (avoid forgetting); top-down attention(knowledge transfer; cfamilarity
+- benchmark for different datasets
 
+- **impressive**
+- **170**
 
 ### AET vs. AED: Unsupervised Representation Learning by Auto-Encoding Transformations Rather Than Data
-
+- Auto-Encoding Transffered
+- compairing with AED ; Adding transferred images
+- AET-affine: random rotation; Scale; Stretch corner
+- AET-project
 
 ### SDC – Stacked Dilated Convolution: A Unified Descriptor Network for Dense Matching Tasks
+- Dense Pixel Matching
+- goal: dense, universal descriptor; full rewsolution, no striding; large receptive field
+- solution: stacking the outputs of parallel convolutions with different dilate rate
 
+**impressive 172**
 
 ### Learning Correspondence From the Cycle-Consistency of Time
+- learn correspondence without human supervision
+- visual world exhibit 
+- prior work: learning from time
+- Using tracking to learn features: 
+- joint track and similarity
+- supervision: cycle-consistency in time
+- skip-cycles: skip occlusion
+- test time: nearest neighbor in feature space
+- video instance segmentation without supervised
 
+- **impressive**
 
 ### AE2-Nets: Autoencoder in Autoencoder Networks
+- multi-view representation learning (means two models)
+- two autoencoder
 
 
 ### Mitigating Information Leakage in Image Representations: A Maximum Entropy Approach
+- representation learning: darkside
+ features contains a lot of information
+ information may be sensitive
+ 
+ - adversarial representation learning
+ - key idea: optimize the endoder to maximize entropy of adversary as opposed tominimizing the likelihood
+- effective and  
 
 
 
 ### Learning Spatial Common Sense With Geometry-Aware Recurrent Networks
+- 3D feature representations
+- geometry-aware recurrent network
+- update aligned features
+- enable adding
+- **176**
+
+**Impressive**
 
 
 ### Structured Knowledge Distillation for Semantic Segmentation
+- mobile application
+- structure information is important
+- pixel-wise distillation
 
 
 ### Scan2CAD: Learning CAD Model Alignment in RGB-D Scans
-
+- scan object to cad model
+- 3d cnn heatmap -> 9dof pose estimation
+- scan2cad dataset
+- Heatmap cnn
 
 ### Towards Scene Understanding: Unsupervised Monocular Depth Estimation With Semantic-Aware Representation
-
+- unsupervised monocular depth estimation
+- semantic-aware
+- 3 parts 
+ - scene representation from a single network (shared scene representation)
+ - multi-task
+ - improve depth estimation from semantic segmentation result
+ 
+- self-supervised learning (left-rigth semantic consistency; semantic-guided disparity smoothness)
 
 ### Tell Me Where I Am: Object-Level Scene Context Prediction
+- object-aware context
+- object can be used a clue for scene representation
 
+- challenges:
+ - various locations;shapes
+ 
+- Idea: scene context prediction nework
 
 ### Normalized Object Coordinate Space for Category-Level 6D Object Pose and Size Estimation
+- detecting 6d-object pose and category
+- NOCS Map
+- Datasets: CAMERA (Context-Aware Mixed-); Real-world dataset
 
+**dataset impressive**
 
 ### Supervised Fitting of Geometric Primitives to 3D Point Clouds
-
+- primitive fitting
+- former work: ransac
 
 ### Do Better ImageNet Models Transfer Better?
+- ImageNet -> used to test other dataset task
+- Imagenet training setting attect transfer of fixed features
+- How well does 
+
+
+**Impressive**
+
+
 
 
 ---
